--- a/src/scss/tobii.scss
+++ b/src/scss/tobii.scss
@@ -84,6 +84,10 @@
   will-change: transform;
 
 
+  &[aria-hidden="true"] {
+    display: none;
+  }
+
   &--animate:not(&--is-dragging) {
     transition-duration: $transition-duration;
     transition-property: transform;
