Change rgba to hsla/ hex to hsl

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,13 +3,13 @@ $base-font-size: 18 !default;
 $transition-duration: 0.3s !default;
 $transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1) !default;
 
-$zoom-icon-background: rgba(26, 42, 58, 0.94) !default;
+$zoom-icon-background: hsla(210, 38%, 16%, 0.94) !default;
 $zoom-icon-color: #fff !default;
 
-$lightbox-background: rgba(26, 42, 58, 0.94) !default;
+$lightbox-background: hsla(210, 38%, 16%, 0.94) !default;
 
 $caption-background: rgba(255, 255, 255, 0.94) !default;
-$caption-color: #1a2a3a !default;
+$caption-color: hsl(210, 38%, 16%) !default;
 
 $counter-background: transparent !default;
 $counter-color: #fff !default;
