--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,7 @@
   --zoom-icon-color: #fff;
 
   --lightbox-background: hsla(210, 38%, 16%, 0.94);
+  --lightbox-z-index: 1337;
 
   --caption-background: rgba(255, 255, 255, 0.94);
   --caption-color: hsl(210, 38%, 16%);
