Fix invalid CSS syntax for base font size

--- a/src/scss/tobii.scss
+++ b/src/scss/tobii.scss
@@ -62,7 +62,7 @@
   bottom: 0;
   box-sizing: border-box;
   contain: strict;
-  font-size: var(--base-font-size)px;
+  font-size: var(--base-font-size);
   left: 0;
   line-height: 1.5;
   overflow: hidden;
