--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,5 @@
 :root {
-  --base-font-size: 18;
+  --base-font-size: 18px;
 
   --transition-duration: 0.3s;
   --transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
