#60 - styles for inline HTML

--- a/src/scss/tobii.scss
+++ b/src/scss/tobii.scss
@@ -333,3 +333,9 @@
     transform: rotate(360deg);
   }
 }
+
+.tobii__slide .tobii-html {
+  background: #fff;
+  padding: 10px 20px;
+  max-width: 800px;
+}
