--- a/src/scss/tobii.scss
+++ b/src/scss/tobii.scss
@@ -94,7 +94,7 @@
   left: 0;
   position: absolute;
   right: 0;
-  top: 0;
+  top: em(50);
   will-change: transform;
 
 
@@ -245,16 +245,12 @@
     width: em(60);
   }
 
-  &:active,
-  &:focus,
-  &:hover {
-    opacity: 1;
-  }
-
   &--previous,
   &--next {
     top: 50%;
     transform: translateY(-50%);
+    background-color: var(--button-navigation-background);
+    border-radius: em(5);
   }
 
   &--previous {
@@ -266,13 +262,22 @@
   }
 
   &--close {
-    right: em(16);
-    top: em(16);
+    right: em(5);
+    top: em(5);
+    width: em(40);
+    height: em(40);
+
+    & svg {
+      transform: scale(1.4);
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &:disabled,
   &[aria-hidden='true'] {
-    display: none;
+    visibility: hidden;
+    cursor: default;
   }
 }
 
@@ -285,12 +290,12 @@
   background-color: var(--counter-background);
   color: var(--counter-color);
   font-size: em(20);
-  left: em(18);
+  left: em(15);
   line-height: 1;
   position: absolute;
-  top: em(40);
+  top: em(15);
   z-index: 1;
-
+  opacity: 0.8;
 
   &[aria-hidden='true'] {
     display: none;
