--- a/src/scss/_functions.scss
+++ b/src/scss/_functions.scss
@@ -1,3 +1,3 @@
 @function em($pixels, $base-font-size: 18) {
-  @return #{$pixels/$base-font-size}em;
+  @return #{calc($pixels / $base-font-size)}em;
 }
