--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -22,6 +22,6 @@
 
   --tobii-loader-color: #ffffff;
 
-  --tobii-slide-max-height: calc(100vh - 2.77778em); /* 50/18px */
+  --tobii-slide-max-height: calc(100vh - 3.125em);
   --tobii-slide-max-width: 100vw;
 }
